err_test.log
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
warning: unused import: `super::trait_::Transform`
 --> crates\ritk-core\src\transform\bspline\mod.rs:5:5
  |
5 | use super::trait_::Transform;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `ritk-core` (lib) generated 1 warning (run `cargo fix --lib -p ritk-core` to apply 1 suggestion)
   Compiling ritk-model v0.1.0 (D:\kwavers\ritk\crates\ritk-model)
warning: type alias `Direction3` is never used
  --> crates\ritk-core\tests\image_test.rs:11:6
   |
11 | type Direction3 = ...
   |      ^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `ritk-core` (test "image_test") generated 1 warning
warning: type alias `TestBackend` is never used
   --> crates\ritk-io\src\format\dicom\mod.rs:312:10
    |
312 | ...pe TestBackend = ...
    |       ^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `ritk-io` (lib test) generated 1 warning
   Compiling ritk-registration v0.1.0 (D:\kwavers\ritk\crates\ritk-registration)
   Compiling ritk-io v0.1.0 (D:\kwavers\ritk\crates\ritk-io)
error[E0432]: unresolved import `ritk_io::dicom_io`
 --> crates\ritk-io\tests\dicom_security.rs:2:14
  |
2 | use ritk_io::dicom_io::{load_dicom_series, DicomSeriesInfo};
  |              ^^^^^^^^ could not find `dicom_io` in `ritk_io`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `ritk-io` (test "dicom_security") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
